# whatsapp-mcp-plus

./: .gitignore  LICENSE  README.md  install.sh  start-bridge.sh
whatsapp-bridge/: main.go
whatsapp-mcp-server/: main.py  pyproject.toml  whatsapp.py
